# herolib

./: .gitignore  CONTRIBUTING.md  README.md  compile.sh  debug.logs  doc  doc.vsh  generate.vsh  herolib.code-workspace  install.vsh  install_hero.sh  install_herolib.vsh  install_v.sh  jina.so.dylib  logfile  release  release.sh  release.vsh  specs.md  test_basic.vsh  test_runner.vsh  test_sqlite.v  v_install.sh
.kilocode/: mcp.json
.zed/: keymap.json  tasks.json
aiprompts/: binencoder.md  currency.md  docker.md  env.md  gittools.md  herolib_start_here.md  httpconnection.md  osal.md  ourdb.md  ourtime.md  paramsparser.md  reflection.md  ui console chalk.md  ui console.md  v_manual_advanced.md  vshell example script instructions.md
cli/: .gitignore  compile.vsh  compile_upload.sh  compile_upload.vsh  compile_vdo.vsh  config.heroscript  hero.v  vdo.v
docker/: docker_ubuntu_install.sh  vscode.sh
examples/: README.md  crystallib.code-workspace  jina_example.vsh  sync_do.sh
lib/: readme.md  v.mod  vpkg.json
lib/lang/python/templates/: env.sh  install.sh  pyproject.toml
lib/lang/python/templates/openrpc/: env.sh  main.py  methods.py  pyproject.toml  start.sh  test.sh
manual/: config.json  create_tag.md  serve_wiki.sh
vdocs/: arrays.md  arrays.parallel.md  benchmark.md  bitfield.md  builtin.md  builtin.wchar.md  cli.md  clipboard.dummy.md  clipboard.md  clipboard.x11.md  compress.deflate.md  compress.gzip.md  compress.md  compress.szip.md  compress.zlib.md  compress.zstd.md  context.md  context.onecontext.md  coroutines.md  crypto.aes.md  crypto.bcrypt.md  (+227 more)
(+3296 files in other folders)
