[project]
name = "@{name}"
version = "@{version}"
description = "@{description}"
requires-python = ">=@{python_version}"
dependencies = [
@{dependencies}
]

[project.scripts]
@{scripts}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
@{dev_dependencies}
]